invoices page zoom  on mobile fix

--- a/client/src/components/Invoices/Invoices.css
+++ b/client/src/components/Invoices/Invoices.css
@@ -102,7 +102,7 @@ label {
     }
 
     .invoice-cards {
-        width: 90%;
+        width: 95%;
     }
 
     .btn button {
